-------------------------------------------------------------------------------
Version 0.7.17

Feature changes:
- Grouping nodes can be marked as remain, summary and permanent 
- Reduced repainting in grouping collapse/expand
- Multiple hidden sets for a section. The effective hidden state is union of all hidden sets. 
  Grouping uses that to allow hiding items independently from collapse/extend state of group nodes.

API changes:
- Add NumberSet class. Made public prematurely in order be used by Grouping. Not polished. Better not use it yet.  
- Added Section.addHiddenSet(NumberSet)
- Added Section.removeHiddenSet(NumberSet)
- Added Section.getHiddenSet()

-------------------------------------------------------------------------------
Version 0.7.16

Bug fixes:
- Editor control was getting focus cell instead of mouse cell with double click activation

-------------------------------------------------------------------------------
Version 0.7.15

Bug fixes:
- Editor activation was throwing NLP 

-------------------------------------------------------------------------------
Version 0.7.14

Features changes:
- SWT.MouseEnter and SWT.MouseExit supported in Zone.addListener
- Image painting optimized to avoid setClipping when not neccessary

Bug fixes:
- Resize cursor was not reset when moving over embedded controls


-------------------------------------------------------------------------------
Version 0.7.13

Features changes:
- CellImageButtonPainter can work with single image to emulate image buttons. 

API changes:
- Added CellImageButtonPainter(String, image)

Bug fixes:
- Section.setWidth(Number) did not consider the size of embedded controls
- Deleting items was causing index out of bounds exception in cell selection set

-------------------------------------------------------------------------------
Version 0.7.12

API changes:
- Added Zone.removeListener(int, Listener)
- Added Grouping.dispose()
